[gd_scene load_steps=14 format=2]

[ext_resource path="res://resources/sisyphus-full-spritesheet-export.png" type="Texture" id=1]
[ext_resource path="res://src/cable/Cable.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="Animation" id=3]
resource_name = "IronCrossActive"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}

[sub_resource type="Animation" id=8]
resource_name = "IronCrossInactive"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 15 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 10 ]
}

[sub_resource type="Animation" id=5]
resource_name = "StraightActive"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=9]
resource_name = "StraightInactive"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 14 ]
}

[sub_resource type="Animation" id=6]
resource_name = "TActive"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[sub_resource type="Animation" id=10]
resource_name = "TInactive"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}

[sub_resource type="Animation" id=7]
resource_name = "TurnActive"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=11]
resource_name = "TurnInactive"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[node name="Cable" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 8
vframes = 8
frame = 10

[node name="Up" type="Area2D" parent="."]
position = Vector2( 0, -32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Up"]
shape = SubResource( 1 )

[node name="Down" type="Area2D" parent="."]
position = Vector2( 0, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Down"]
shape = SubResource( 1 )

[node name="Right" type="Area2D" parent="."]
position = Vector2( 32, 0 )
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
shape = SubResource( 1 )

[node name="Left" type="Area2D" parent="."]
position = Vector2( -32, 0 )
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
shape = SubResource( 1 )

[node name="ClickArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
scale = Vector2( 3, 3 )
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/IronCrossActive = SubResource( 3 )
anims/IronCrossInactive = SubResource( 8 )
anims/RESET = SubResource( 4 )
anims/StraightActive = SubResource( 5 )
anims/StraightInactive = SubResource( 9 )
anims/TActive = SubResource( 6 )
anims/TInactive = SubResource( 10 )
anims/TurnActive = SubResource( 7 )
anims/TurnInactive = SubResource( 11 )

[connection signal="area_entered" from="Up" to="." method="_on_Edge_area_entered" binds= [ "upNode" ]]
[connection signal="area_exited" from="Up" to="." method="_on_Edge_area_exited" binds= [ "upNode" ]]
[connection signal="area_entered" from="Down" to="." method="_on_Edge_area_entered" binds= [ "downNode" ]]
[connection signal="area_exited" from="Down" to="." method="_on_Edge_area_exited" binds= [ "downNode" ]]
[connection signal="area_entered" from="Right" to="." method="_on_Edge_area_entered" binds= [ "rightNode" ]]
[connection signal="area_exited" from="Right" to="." method="_on_Edge_area_exited" binds= [ "rightNode" ]]
[connection signal="area_entered" from="Left" to="." method="_on_Edge_area_entered" binds= [ "leftNode" ]]
[connection signal="area_exited" from="Left" to="." method="_on_Edge_area_exited" binds= [ "leftNode" ]]
[connection signal="input_event" from="ClickArea" to="." method="_on_ClickArea_input_event"]
